WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76299
-[WebTileCacheLayer setNeedsDisplay] doesn't trigger invalidation
https://bugs.webkit.org/show_bug.cgi?id=76299
Summary
-[WebTileCacheLayer setNeedsDisplay] doesn't trigger invalidation
Anders Carlsson
Reported
2012-01-13 12:25:24 PST
-[WebTileCacheLayer setNeedsDisplay] doesn't trigger invalidation
Attachments
Patch
(3.08 KB, patch)
2012-01-13 12:54 PST
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-01-13 12:54:03 PST
Created
attachment 122483
[details]
Patch
Anders Carlsson
Comment 2
2012-01-13 13:21:00 PST
Committed
r104978
: <
http://trac.webkit.org/changeset/104978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug